slow input text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>thisismyhomepage</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>link-in-bio</title>
+<style>
+body {
+  background-image: url("images/longpaperwhite.png");
+  div   {
+    color: black;
+    font-family: sudestada, sans-serif;
+    font-style: normal;
+    font-weight: 400;;
+  }
+}
+
+.header {
+  font-size: 200;
+  justify-content: center;
+  align-items: center;
+}
+</style> 
+</head>
+<body>
+  <h1><div>media i'm consuming!</div></h1>
+  <div class="header">media i'm consuming!</div>
+</body>
+</html>
