--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@ body {
       text-align: right;
     }
 
-    .block:nth-child(5) {
-      grid-column: 1 / 2; /* First column */
-      grid-row: 2; /* First row */
+    .image-block:nth-child(1) {
+      grid-column: 2 / 3;
+      grid-row: 1;
       text-align: right;
       grid-column: 1;
     }
-    .block:nth-child(4) {
-      grid-column: 2 / 3; /* Second column */
-      grid-row: 1; /* Second row */
+    .image-block:nth-child(2) {
+      grid-column: 1 / 2; 
+      grid-row: 2; 
       text-align: left;
     }
     
-    .block:nth-child(6) {
-      grid-column: 2 / 3; /* Second column */
-      grid-row: 3; /* Second row */
+    .image-block:nth-child(3) {
+      grid-column: 2 / 3; 
+      grid-row: 3; 
       text-align: left;
     }
     
@@ -114,9 +114,9 @@ body {
     <div class="project_desc">3D render using Rhino</div>
   </div>
 
-  <div class="block image-block">
+  <div class="image-block">
     <a href="https://taramakhija.com">
-      <img src="images/loungechair3.png" alt="Description of Image" style="max-height: 600px; max-width: 600px;">
+      <img src="images/loungechair3 Background Removed.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
     </a>
   </div>
 
@@ -125,7 +125,7 @@ body {
     <div class="project_desc_right">Architectural plans and laser-cut model using Rhino, Illustrator</div>
   </div>
 
-  <div class="block image-block">
+  <div class="image-block">
     <a href="https://taramakhija.com">
       <img src="images/playgroundlines.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
     </a>
@@ -137,7 +137,7 @@ body {
     <div class="project_desc">3D render using Rhino, Blender</div>
   </div>
 
-  <div class="block image-block">
+  <div class="image-block">
     <a href="https://taramakhija.com">
       <img src="images/modelnobg.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
     </a>
