cant remember if i committed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
-  <title>link-in-bio</title>
+  <title>digital modeling</title>
 <style>
 body {
   background-image: url("images/longpaperwhite.png");
@@ -34,11 +34,20 @@ body {
 }
 
 .block{
-  grid-column: 2 / span 1;
   margin-top: 60px;
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 60px;
+  border: 1px solid red; 
+}
+
+.image-block{
+  margin-top: 60px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 60px;
+  border: 1px solid red; 
+  text-align: center;
 }
 
     .block:nth-child(1) {
@@ -50,7 +59,6 @@ body {
       grid-column: 2 / 3; /* Second column */
       grid-row: 2; /* Second row */
       text-align: left;
-      grid-column: 2;
     }
     .block:nth-child(3) {
       grid-column: 1 / 2; /* First column */
@@ -61,19 +69,19 @@ body {
     .image-block:nth-child(1) {
       grid-column: 2 / 3;
       grid-row: 1;
-      text-align: right;
-      grid-column: 1;
+
+
     }
     .image-block:nth-child(2) {
       grid-column: 1 / 2; 
       grid-row: 2; 
-      text-align: left;
+
     }
     
     .image-block:nth-child(3) {
       grid-column: 2 / 3; 
       grid-row: 3; 
-      text-align: left;
+
     }
     
 
@@ -107,7 +115,7 @@ body {
 </style> 
 </head>
 <body>
-  <div class="header">modeling</div>
+  <div class="header"> digital modeling</div>
 <div class = "container">
   <div class="block">
     <div class="project_heading">Accessible Playground</div>
