--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 
 .header {
   display: flex;
-  padding-top: 35px;
+  padding-top: 30px;
   font-size: 64px;
   justify-content: center;
 }
@@ -34,19 +34,14 @@ body {
 }
 
 .block{
-  margin-top: 60px;
   margin-left: 40px;
   margin-right: 40px;
-  margin-bottom: 60px;
-  border: 1px solid red; 
+
 }
 
 .image-block{
-  margin-top: 60px;
   margin-left: 40px;
   margin-right: 40px;
-  margin-bottom: 60px;
-  border: 1px solid red; 
   text-align: center;
 }
 
@@ -123,8 +118,8 @@ body {
   </div>
 
   <div class="image-block">
-    <a href="https://taramakhija.com">
-      <img src="images/loungechair3 Background Removed.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
+    <a href="https://taramakhija.com/loungechair">
+      <img src="images/loungechair3 Background Removed.png" alt="Description of Image" style="max-height: 400px; max-width: 300px;">
     </a>
   </div>
 
@@ -134,8 +129,8 @@ body {
   </div>
 
   <div class="image-block">
-    <a href="https://taramakhija.com">
-      <img src="images/playgroundlines.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
+    <a href="https://taramakhija.com/accessible-playground">
+      <img src="images/playgroundlines.png" alt="Description of Image" style="max-height: 400px; max-width: 325px;">
     </a>
   </div>
 
@@ -146,8 +141,8 @@ body {
   </div>
 
   <div class="image-block">
-    <a href="https://taramakhija.com">
-      <img src="images/modelnobg.png" alt="Description of Image" style="max-height: 400px; max-width: 400px;">
+    <a href="https://taramakhija.com/communitycenter">
+      <img src="images/modelnobg.png" alt="Description of Image" style="max-height: 400px; max-width: 300px;">
     </a>
   </div>
 
