--- a/index.html
+++ b/index.html
@@ -40,9 +40,18 @@ body {
 }
 
 .image-block{
+  transition: transform .7s ease-in-out;
   margin-left: 40px;
   margin-right: 40px;
   text-align: center;
+}
+
+.image-block:hover {
+  transform: rotate(10deg);
+}
+
+.image-block:nth-child(2):hover {
+  transform: rotate(-10deg);
 }
 
     .block:nth-child(1) {
@@ -70,7 +79,6 @@ body {
     .image-block:nth-child(2) {
       grid-column: 1 / 2; 
       grid-row: 2; 
-
     }
     
     .image-block:nth-child(3) {
