added social images + links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body {
 
   <div class="image-block">
     <a href="https://taramakhija.com/loungechair">
-      <img src="images/loungechair3 Background Removed.png" alt="Description of Image" style="max-height: 400px; max-width: 300px;">
+      <img src="images/loungechair3 Background Removed.png" alt="lounge chair" style="max-height: 400px; max-width: 300px;">
     </a>
   </div>
 
@@ -138,7 +138,7 @@ body {
 
   <div class="image-block">
     <a href="https://taramakhija.com/accessible-playground">
-      <img src="images/playgroundlines.png" alt="Description of Image" style="max-height: 400px; max-width: 325px;">
+      <img src="images/playgroundlines.png" alt="playground line drawing" style="max-height: 400px; max-width: 325px;">
     </a>
   </div>
 
@@ -150,10 +150,20 @@ body {
 
   <div class="image-block">
     <a href="https://taramakhija.com/communitycenter">
-      <img src="images/modelnobg.png" alt="Description of Image" style="max-height: 400px; max-width: 300px;">
+      <img src="images/modelnobg.png" alt="laser-cut model" style="max-height: 400px; max-width: 300px;">
     </a>
   </div>
 
+  <div style="display: inline-flex; justify-content: center; align-items: center; gap: 5px; width: 850px;">
+    <a href="https://www.linkedin.com/in/tara-makhija/">
+      <img src="images/linkedin icon.webp" alt="linkedin icon" style="max-height: 50px; max-width: 50px;">
+    </a>
+  </div>
+  <div>
+    <a href="mailto:tmakhija51@gmail.com">
+      <img src="images/email icon.webp" alt="email icon" style="max-height: 50px; max-width: 50px;">
+    </a>
+  </div>
 
 </div>
 
